# pr2_robot

./: .hgignore  .travis.yml  CMakeLists.txt  README.md  rosdep.yaml  stack.xml
imu_monitor/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
imu_monitor/scripts/: imu_monitor.py
pr2_bringup/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  pr2-c2.bak  pr2-c2.launch  pr2.launch  pr2_recalibrate.launch
pr2_bringup/config/: analyzers.yaml  analyzers_arms.yaml  dualstereo_camera.launch  forearm_camera_l.launch  forearm_camera_r.launch  kinect2_bridge.launch  l_forearm_cam.launch  pr2.machine  pr2_analyzers.launch  pr2_analyzers.yaml  pr2_camera_projector_trigger_controllers.xml  pr2_noarms_analyzers.yaml  prosilica.launch  r_forearm_cam.launch  sim.machine
pr2_bringup/config/no_arms/: pr2_analyzers_no_arms_diff.launch  pr2_analyzers_no_arms_diff.yaml
pr2_bringup/scripts/: calibrate.py  calibrate_pr2.py  calibrate_pr2_fast.py  calibrate_pr2_new.py
pr2_bringup/test/: pr2_analyzers_load_test.launch
pr2_camera_synchronization/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_camera_synchronization/cfg/: CameraSynchronizer.cfg
pr2_camera_synchronization/nodes/: camera_synchronizer
pr2_camera_synchronization/src/pr2_camera_synchronization/: levels.py  synchronizer_classes.py
pr2_camera_synchronization/test/: test_classes.py
pr2_camera_synchronizer/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  pr2_camera_synchronizer.launch  projector_auto.launch  projector_off.launch  projector_on.launch  setup.py
pr2_camera_synchronizer/cfg/: CameraSynchronizer.cfg
pr2_camera_synchronizer/nodes/: pr2_camera_synchronizer  pr2_camera_synchronizer_no_forearm
pr2_camera_synchronizer/scripts/: plot_multi_trigger.py
pr2_camera_synchronizer/src/pr2_camera_synchronizer/: synchronizer_classes.py
pr2_camera_synchronizer/test/: fake_multi_trigger_controller.py  test_classes.py  test_consistency.launch  test_consistency.test
pr2_computer_monitor/: CHANGELOG.rst  CMakeLists.txt  INSTALL  mainpage.dox  manifest.xml  package.xml  setup.py
pr2_computer_monitor/demo/: hd_monitor.launch  ntp_monitor.launch
pr2_computer_monitor/scripts/: README.md  cpu_monitor.py  hd_monitor.py  ntp_monitor.py  nvidia_temp.py  wifi_monitor.py
pr2_computer_monitor/src/: network_detector.cpp
pr2_computer_monitor/src/pr2_computer_monitor/: nvidia_smi_util.py
pr2_computer_monitor/test/: cpu_monitor.launch  hd_monitor.launch  ntp_monitor.launch  parse_test.py
pr2_computer_monitor/test/sample_output/: nvidia_smi_high_temp.txt  nvidia_smi_out.txt
pr2_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  pr2_arm_controllers.yaml  pr2_base_controller.yaml  pr2_base_controller2.yaml  pr2_calibration_controllers.yaml  pr2_default_controllers.launch  pr2_gripper_controllers.yaml  pr2_head_controller.yaml  pr2_joint_effort_controllers.yaml  pr2_joint_group_velocity_controllers.yaml  pr2_joint_position_controllers.yaml  pr2_joint_velocity_controllers.yaml  pr2_jt_controllers.launch  pr2_laser_tilt_controller.yaml  pr2_odometry.yaml  pr2_torso_controller.yaml
pr2_dashboard_aggregator/: dashboard_aggregator.py  mainpage.dox  manifest.xml
pr2_etherCAT/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_etherCAT/scripts/: halt_motors.py  publish_trace.py  reset_motors.py  test_halt.py
pr2_etherCAT/src/: main.cpp
pr2_ethercat/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
pr2_ethercat/scripts/: halt_motors.py  publish_trace.py  reset_motors.py  test_halt.py
pr2_ethercat/src/: main.cpp
pr2_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_run_stop_auto_restart/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_run_stop_auto_restart/src/: run_stop_auto_restart.cpp
