<package>
  <name>imu_monitor</name>
  <version>1.6.24</version>
  <description>This package contains a single node that monitors the drift of the IMU
gyroscopes. The results are published to the '/diagnostics' topic and
are aggregated in the PR2 dashboard.</description>
  <maintainer email="ahendrix@willowgarage.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/imu_monitor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
</package>
