<package format="3">
  <name>imu_monitor</name>
  <version>1.6.32</version>
  <description>This package contains a single node that monitors the drift of the IMU
gyroscopes. The results are published to the '/diagnostics' topic and
are aggregated in the PR2 dashboard.</description>
  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/imu_monitor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pr2_mechanism_controllers</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python_orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-pykdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
</package>
