<package>
  <name>pr2_computer_monitor</name>
  <version>1.6.24</version>
  <description>Monitors the computer's processor and hard drives of the PR2 and publishes data to diagnostics.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/pr2_computer_monitor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts (watts@willowgarage.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>




</package>
