<package format="3">
  <name>pr2_computer_monitor</name>
  <version>1.6.32</version>
  <description>Monitors the computer's processor and hard drives of the PR2 and publishes data to diagnostics.</description>
  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/pr2_computer_monitor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kevin Watts (watts@willowgarage.com)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>




</package>
