<package>
  <name>pr2_controller_configuration</name>
  <version>1.6.24</version>
  <description>Configuration files for PR2 controllers.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_controller_configuration</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>pr2_machine</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>single_joint_position_action</run_depend>
  <run_depend>pr2_head_action</run_depend>
  <run_depend>pr2_gripper_action</run_depend>
</package>
