cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
set(ROS_BUILD_TYPE Release)
rosbuild_init()
rosbuild_add_boost_directories()
rosbuild_add_executable(pr2_etherCAT src/main.cpp)
rosbuild_link_boost (pr2_etherCAT thread system)
target_link_libraries (pr2_etherCAT rt)
rosbuild_remove_compile_flags(pr2_etherCAT -W)
